@@ -396,6 +396,8 @@ semicolons from theory sources.
 * The Isabelle tool "update_cartouches" changes theory files to use
 cartouches instead of old-style {* verbatim *} or `alt_string` tokens.
 
+* The Isabelle tool "build" provides new option -k.
+
 
 
 New in Isabelle2014 (August 2014)
